--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass ./sass/main.scss:./css/main.css -w --style expanded",
-    "prefix": "postcss ./css/main.css --use autoprefixer -d ./css/prefixed/"
+    "sass": "sass ./sass/main.scss:./css/main.css -w --style expanded"
   },
   "repository": {
     "type": "git",
